# lxlauncher

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  gtk.css  gtkrc  settings.conf.in
data/: Learn.directory  Math.directory  Play.directory  Science.directory  Work.directory  launcher.menu  launcher.rules  lxde-language.directory.in  lxde-learn.directory  lxde-learn.directory.in  lxde-math.directory  lxde-math.directory.in  lxde-play.directory  lxde-play.directory.in  lxde-science.directory  lxde-science.directory.in  lxde-webmail.directory  lxde-webmail.directory.in  lxde-work.directory  lxde-work.directory.in  lxlauncher-applications.menu  lxlauncher.1.in  lxlauncher.menu
data/Default/: theme.rc
debian/: changelog  control  copyright  rules  watch
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  km.po  ko.po  lg.po  lt.po  lxlauncher-ve.po  (+30 more)
src/: Makefile.am  app-view.c  app-view.h  exo-wrap-table.c  exo-wrap-table.h  lxlauncher.c  misc.c  misc.h  theme.c  theme.h  vfs-app-desktop.c  vfs-app-desktop.h  vfs-execute.c  vfs-utils.c  vfs-utils.h  working-area.c
