dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(lxlauncher, 0.2.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Init intltool
IT_PROG_INTLTOOL

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

gtk_modules="gtk+-2.0 >= 2.10.0"
PKG_CHECK_MODULES(GTK, [$gtk_modules])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

sn_modules="libstartup-notification-1.0"
PKG_CHECK_MODULES(SN, [$sn_modules])
AC_SUBST(SN_CFLAGS)
AC_SUBST(SN_LIBS)

gmenu_modules="libmenu-cache"
PKG_CHECK_MODULES(GMENU, [$gmenu_modules])
AC_SUBST(GMENU_CFLAGS)
AC_SUBST(GMENU_LIBS)

GETTEXT_PACKAGE=lxlauncher
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="af ar cs da de es et eu fa fi fr gl hr hu id it ja ko lt ml nb nl nn pl ps pt pt_BR ru sk sl sv tr uk ur ur_PK vi zh_CN zh_TW"

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
settings.conf
src/Makefile
po/Makefile.in
])

